--- a/package.json
+++ b/package.json
@@ -15,15 +15,7 @@
   "bugs": {
     "url": "https://github.com/sebastianhaas/grunt-typings/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/sebastianhaas/grunt-typings/blob/master/LICENSE-MIT"
-    }
-  ],
-  "engines": {
-    "node": ">= 0.8.0"
-  },
+  "license": "MIT",
   "scripts": {
     "test": "grunt test"
   },
@@ -37,6 +29,6 @@
     "gruntplugin"
   ],
   "dependencies": {
-    "typings": "^0.6.6"
+    "typings": "^0.6.8"
   }
 }
