--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "grunt-typings",
   "description": "A Grunt plugin for typings",
   "version": "0.1.3",
-  "homepage": "https://github.com/sebastianhaas/grunt-typings",
+  "homepage": "https://github.com/typings/grunt-typings",
   "author": {
     "name": "Sebastian Haas",
     "email": "sebastian@haas.tech",
@@ -10,10 +10,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:sebastianhaas/grunt-typings.git"
+    "url": "git@github.com:typings/grunt-typings.git"
   },
   "bugs": {
-    "url": "https://github.com/sebastianhaas/grunt-typings/issues"
+    "url": "https://github.com/typings/grunt-typings/issues"
   },
   "license": "MIT",
   "scripts": {
@@ -29,6 +29,6 @@
     "gruntplugin"
   ],
   "dependencies": {
-    "typings": "^0.6.8"
+    "typings-core": "^0.2.10"
   }
 }
